[package]
name = "stripe-webhooks"
version = "0.3.0"
edition = "2024"
authors = ["Bytebury <bytebury@gmail.com>"]
description = "Stripe webhook integration"
readme = "README.md"
keywords = ["stripe", "stripe-webhooks"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
